...
                                        <blurEffect style="dark"/>
                                    </visualEffectView>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="drC-uN-SeI">
                                        <rect key="frame" x="5" y="16" width="404" height="32"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <segments>
                                            <segment title="Movies"/>
                                            <segment title="Musics"/>
                                            <segment title="Apps"/>
                                            <segment title="Books"/>
                                        </segments>
                                        <color key="selectedSegmentTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <connections>
                                            <action selector="segmentControl:" destination="BYZ-38-t0r" eventType="valueChanged" id="ken-Rx-agT"/>
                                        </connections>
                                    </segmentedControl>
...
